style="color: black;"

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 </head>
   <body>
-    <section id="schedule" class="text-center text-white">
+    <section style="color: black;" id="schedule" class="text-center text-white">
       <h2>Schecule Meeting</h2>
       <br>
       <br>
