--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <div style="background-color: #b4f4caff;">
-    <center><h1 class="signup">Sign Up Entry</h1></senter>
+    <center><h1 class="signup">Sign Up Entry</h1></center>
       <center><h3>Please, fill up the form before the ivent!</h3></center>
       <form class="form" action="https://formdump.codeinstitute.net" target="_blank" method="post">
         <input id="name-field" name="name" class="input" type="text" placeholder="Your name" required>
