--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<!DOCTYPE html><html lang='en-US'>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <head>
