--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <li><a href="index.html"><h3>Home</h3></a></li>
             <li><a href="gallery.html"><h3>Gallery</h3></a></li>
             <li><a href="about.html" class='active'><h3>About Us</h3></a></li>
-            <li><a href="index.html#schedule"><h3>Contacts</h3></a></li>
+            <li><a href="index.html#schedule"><h3>Contact</h3></a></li>
             <li><a href="form.html"><h3 style="color: red">SignUp</h3></a></li>
           </ul>
         </nav>
