--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
           <li><a href="index.html"><h3>Home</h3></a></li>
           <li><a href="gallery.html" class='active'><h3>Gallery</h3></a></li>
           <li><a href="about.html"><h3>About Us</h3></a></li>
-          <li><a href="index.html#schedule"><h3>Contacts</h3></a></li>
+          <li><a href="index.html#schedule"><h3>Contact</h3></a></li>
           <li><a href="form.html"><h3 style="color: red">SignUp</h3></a></li>
         </ul>
       </nav>
