--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  </head>
   <header>
     <div class="container">
-      <a href="http://www.moto.kiev.ua" id="logo" target="_blank"><h3>web-moto.net</h3></a>
+      <a href="http://www.moto.kiev.ua" id="logo" target="_blank"><h3>web-moto.net</h3</a>
       <label for="toggle-1" class="toggle-menu"><i class="toggle-icon"></i></label>
       <input type="checkbox" id="toggle-1">
       <nav>
