--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
 	<meta name="author" content="BIKERS">
 	<link rel="stylesheet" href="style.css" type="text/css">
-  <title>BIKE-SHOW</title>
+  <title>About US</title>
   <style></style>
 </head>
 <body>
