--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         </nav>
       </div>
      </header>
-  <img src="Motorcycle%20Meat%20Up/assets/images/goblinshow.jpg">
+  <img src="MotorcycleMeatUp/assets/images/goblinshow.jpg">
 <div style="background-color: #b4f4caff;" class="div2">
   <center><b><h1>In 1999 - The First International Gathering of Motorcycle Tourists.</h1></b></center>
     <br><br>
