--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </style>
    <title>Meeting</title>
  </head>
-  <header>
+ <header>
     <div class="container">
-      <a href="http://www.moto.kiev.ua" id="logo" target="_blank"><h3>web-moto.net</h3</a>
+      <a href="http://www.moto.kiev.ua" id="logo" target="_blank"><h3>web-moto.net</h3></a>
       <label for="toggle-1" class="toggle-menu"><i class="toggle-icon"></i></label>
       <input type="checkbox" id="toggle-1">
       <nav>
-        <ul>
+        <ul class="menu">
           <li><a href="#home" class='active'><h3>Home</h3></a></li>
           <li><a href="gallery.html"><h3>Gallery</h3></a></li>
           <li><a href="about.html"><h3>About Us</h3></a></li>
