change  CSS for header position fixed, top 0, z-index 2  header {       width: 100%;       display: table;       background-color: #002e5b;       margin-bottom: 0;      position: fixed;       z-index: 2;       top: 0;     }

--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
         </nav>
       </div>
      </header>
-  <img src="MotorcycleMeatUp/assets/images/goblinshow.jpg">
+  <img class="goblin" src="MotorcycleMeatUp/assets/images/goblinshow.jpg">
 <div style="background-color: #b4f4caff;" class="div2">
-  <center><b><h1>In 1999 - The First International Gathering of Motorcycle Tourists.</h1></b></center>
+<center><b><h1>In 1999 - The First International Gathering of Motorcycle Tourists.</h1></b></center>
     <br><br>
     <b><h2>&nbsp;&nbsp;&nbsp;Also known as "GOBLIN SHOW", was held in Odessa
   On the territory of the Burevestnik camp, district 411 Batteries. Andrey "Goblin" became the organizer and ideological inspirer. The whole event took place over 2 days. The number of participants then did not exceed 60 motorcyclists from Ukraine and Moldova.</h2></b>
