Fxed validation errors

--- a/form.html
+++ b/form.html
@@ -6,8 +6,7 @@
   <meta name="description" content="The official site of BIKE-SHOW.">
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
   <meta name="author" content="BIKERS">
-  <style></style>
-<title>SignUp</title>
+  <title>SignUp</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
   <body>
@@ -33,12 +32,12 @@
     <center><h1 class="signup">Sign Up Entry</h1></center>
       <center><h3>Please, fill up the form before the ivent!</h3></center>
       <form class="form" action="https://formdump.codeinstitute.net" target="_blank" method="post">
-        <input id="name-field" name="name" class="input" type="text" placeholder="Your name" required>
-        <input id="email-field" name="email" class="input" type="email" placeholder="Your e-mail" required>
-        <input id="phone-field" name="phone" class="input" type="tel" placeholder="Your phone" required>
-        <input id="sex-field" name="sex" class="input" type="text" placeholder=" Your sex">
-        <input id="age=field" name="age" class="input" type="text" placeholder="Your age">
-        <input id="bike-field" name="bike" class="input" type="text" placeholder="Your bike">
+        <input id="name-field" name="name" class="input" type="text" placeholder="Name" required>
+        <input id="email-field" name="email" class="input" type="email" placeholder="E-mail" required>
+        <input id="phone-field" name="phone" class="input" type="tel" placeholder="Phone" required>
+        <input id="sex-field" name="sex" class="input" type="text" placeholder=" Sex">
+        <input id="age=field" name="age" class="input" type="text" placeholder="Age">
+        <input id="bike-field" name="bike" class="input" type="text" placeholder="Bike">
         <button class="btn" type="submit">Sign Up</button>
       </form>
       <footer class="footer">
