--- a/gallery.html
+++ b/gallery.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-  <meta name="description" content="The official site of BIKE-SHOW.">
-  <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
-	<meta name="author" content="BIKERS">
-	
-	<link rel="stylesheet" href="style.css" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-  <style></style>
-  <title>Gallery</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="The official site of BIKE-SHOW.">
+<meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
+<meta name="author" content="BIKERS">
+<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
+<title>Gallery</title>
 </head>
-<body>
+<body class="body">
   <header>
     <div class="container">
       <a href="http://www.moto.kiev.ua" id="logo" target="_blank"><h3>web-moto.net</h3></a>
@@ -29,8 +28,8 @@
       </nav>
     </div>
   </header>
-  <body style="background-color: #b4f4caff;">
-	<section id="slider_bl">
+<div>
+  <div id="slider_bl">
 	<div class="wrapper">
 	  <input checked="" type="radio" name="slider" id="slide1">
 	  <input type="radio" name="slider" id="slide2">
@@ -42,27 +41,27 @@
 	      <article>
 	        <div class="info top-left">
 	          <h3>Slide 1</h3></div>
-	        <img src="https://i.ibb.co/qWbzHnQ/DSC-4905.jpg">
+	        <img src="https://i.ibb.co/qWbzHnQ/DSC-4905.jpg" alt="4905">
 	      </article>
 	      <article>
 	        <div class="info bottom-right">
 	          <h3>Slide 2</h3></div>
-	        <img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg">
+	        <img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg" alt="3529">
 	      </article>
 	      <article>
 	        <div class="info bottom-left">
 	          <h3>Slide 3</h3></div>
-	        <img src="https://i.ibb.co/cb8fRFq/DSC-1889.jpg">
+	        <img src="https://i.ibb.co/cb8fRFq/DSC-1889.jpg" alt="1889">
 	      </article>
 	      <article>
 	        <div class="info top-right">
 	          <h3>Slide 4</h3></div>
-	        <img src="https://i.ibb.co/hmQrLB1/DSC-6245.jpg">
+	        <img src="https://i.ibb.co/hmQrLB1/DSC-6245.jpg" alt=6245>
 	      </article>
         <article>
 	        <div class="info top-right">
 	          <h3>Slide 5</h3></div>
-	        <img src="https://i.ibb.co/p45thCy/DSC-6267.jpg">
+	        <img src="https://i.ibb.co/p45thCy/DSC-6267.jpg" alt=6267>
 	      </article>
 	    </div>
 	  </div>
@@ -81,24 +80,24 @@
       <label for="slide5"></label>
 	  </div>
 	</div>
-</section>
-<section class="pictures">
+</div>
+  <div class="pictures">
 <a class="pictures-img" href="https://ibb.co/VYS87mZ" target="_blank"><img src="https://i.ibb.co/r26JCsS/Untitled-2.jpg" alt="Untitled-2"/></a>
-<a class="pictures-img" href="https://ibb.co/ZdCtQtW" target="_blank"><img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg" alt="DSC-3529" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/drVdwQx" target="_blank"><img src="https://i.ibb.co/hy4PJKw/Untitled-4.jpg" alt="Untitled-4" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/kDPcQ7z" target="_blank"><img src="https://i.ibb.co/myPz6jd/Untitled-3.jpg" alt="Untitled-3" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/WVPWpDf" target="_blank"><img src="https://i.ibb.co/sW6vJ5q/IMG-0127.jpg" alt="IMG-0127" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/MSWCvnY" target="_blank"><img src="https://i.ibb.co/xLP7khp/DSC-8014.jpg" alt="DSC-8014" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/0FnPQRJ" target="_blank"><img src="https://i.ibb.co/Sd6qJ4v/DSC-7712.jpg" alt="DSC-7712" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/XLYN5X8" target="_blank"><img src="https://i.ibb.co/T2Wp0cL/DSC-6317.jpg" alt="DSC-6317" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/FhBX5Nw" target="_blank"><img src="https://i.ibb.co/cyNw6MF/DSC-6312.jpg" alt="DSC-6312" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/phpStbw" target="_blank"><img src="https://i.ibb.co/g4Cx5m9/DSC-6302.jpg" alt="DSC-6302" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/JpgJJ2L" target="_blank"><img src="https://i.ibb.co/6tLCCbh/DSC-6300.jpg" alt="DSC-6300" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/9rKBcb3" target="_blank"><img src="https://i.ibb.co/hmQrLB1/DSC-6245.jpg" alt="DSC-6245" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/vZNhbj0" target="_blank"><img src="https://i.ibb.co/FgQX9DR/DSC-5674.jpg" alt="DSC-5674" border="0"></a>
-<a class="pictures-img" href="https://ibb.co/pRCgHPF" target="_blank"><img src="https://i.ibb.co/qWbzHnQ/DSC-4905.jpg" alt="DSC-4905" border="0"></a>
-</section>
-</body>
+<a class="pictures-img" href="https://ibb.co/ZdCtQtW" target="_blank"><img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg" alt="DSC-3529"></a>
+<a class="pictures-img" href="https://ibb.co/drVdwQx" target="_blank"><img src="https://i.ibb.co/hy4PJKw/Untitled-4.jpg" alt="Untitled-4"></a>
+<a class="pictures-img" href="https://ibb.co/kDPcQ7z" target="_blank"><img src="https://i.ibb.co/myPz6jd/Untitled-3.jpg" alt="Untitled-3"></a>
+<a class="pictures-img" href="https://ibb.co/WVPWpDf" target="_blank"><img src="https://i.ibb.co/sW6vJ5q/IMG-0127.jpg" alt="IMG-0127"></a>
+<a class="pictures-img" href="https://ibb.co/MSWCvnY" target="_blank"><img src="https://i.ibb.co/xLP7khp/DSC-8014.jpg" alt="DSC-8014"></a>
+<a class="pictures-img" href="https://ibb.co/0FnPQRJ" target="_blank"><img src="https://i.ibb.co/Sd6qJ4v/DSC-7712.jpg" alt="DSC-7712"></a>
+<a class="pictures-img" href="https://ibb.co/XLYN5X8" target="_blank"><img src="https://i.ibb.co/T2Wp0cL/DSC-6317.jpg" alt="DSC-6317"></a>
+<a class="pictures-img" href="https://ibb.co/FhBX5Nw" target="_blank"><img src="https://i.ibb.co/cyNw6MF/DSC-6312.jpg" alt="DSC-6312"></a>
+<a class="pictures-img" href="https://ibb.co/phpStbw" target="_blank"><img src="https://i.ibb.co/g4Cx5m9/DSC-6302.jpg" alt="DSC-6302"></a>
+<a class="pictures-img" href="https://ibb.co/JpgJJ2L" target="_blank"><img src="https://i.ibb.co/6tLCCbh/DSC-6300.jpg" alt="DSC-6300"></a>
+<a class="pictures-img" href="https://ibb.co/9rKBcb3" target="_blank"><img src="https://i.ibb.co/hmQrLB1/DSC-6245.jpg" alt="DSC-6245"></a>
+<a class="pictures-img" href="https://ibb.co/vZNhbj0" target="_blank"><img src="https://i.ibb.co/FgQX9DR/DSC-5674.jpg" alt="DSC-5674"></a>
+<a class="pictures-img" href="https://ibb.co/pRCgHPF" target="_blank"><img src="https://i.ibb.co/qWbzHnQ/DSC-4905.jpg" alt="DSC-4905"></a>
+  </div>
+</div>
 <footer class="footer">
     <div class="waves">
     <div class="wave" id="wave1"></div>
@@ -106,7 +105,7 @@
     <ul class="social">
         <li><a  href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><ion-icon name="logo-facebook"></ion-icon></a></li>
         <li><a  href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"><ion-icon></a></li>
+        <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"></ion-icon></a></li>
         <li><a  href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><ion-icon name="logo-instagram"></ion-icon></a></li>
     </ul>
   <ul class="menuf">
