--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
  <head>
 	<meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-  <meta name="description" content="The official site of BIKE-SHOW.">
-  <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
-	<meta name="author" content="BIKERS">
+  <meta http-equiv="X-UA-Compateble" content="IE=adge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css" type="text/css">
-  <style>
-  </style>
-   <title>Meeting</title>
- </head>
- <header>
+<title>Meeting</title>
+</head>
+<body>
+    <header>
     <div class="container">
       <a href="http://www.moto.kiev.ua" id="logo" target="_blank"><h3>web-moto.net</h3></a>
       <label for="toggle-1" class="toggle-menu"><i class="toggle-icon"></i></label>
@@ -27,8 +24,6 @@
       </nav>
     </div>
   </header>
-</head>
-  <body>
     <section id="schedule" class="text-center text-white">
       <h2>Schecule Meeting</h2>
       <br>
@@ -65,9 +60,9 @@
         <h3>Contacts</h3>
         <div>
           <br>
-          <b><p class='playfair'>E-mail:</p></b>
+          <b>E-mail:</b>
           <p class='playfair'>copuchino@dog.com</p>
-          <b><p class='playfair'>Phone:</p></b>
+          <b>Phone:</b>
           <p class='playfair'>+380500587432</p>
           <br>
           <br>
@@ -185,7 +180,6 @@
 <br>&nbsp;&nbsp;&nbsp;FOR GROUPS TO CONFIRM PARTICIPATION, i.e. call back!!!
 </div>
     </div>
-  </div>
     <footer class="footer">
       <div class="waves">
         <div class="wave" id="wave1"></div>
@@ -206,8 +200,6 @@
       <p>©2022 Online Tutorials | All Rights Reserved</p>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">
-    </script>
-  </div>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
