fix HTML validator errors

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <head>
 	<meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="The official site of BIKE-SHOW.">
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
 	<meta name="author" content="BIKERS">
@@ -34,7 +34,7 @@
 <div style="background-color: #b4f4caff;" class="div2">
 <center><b><h1>In 1999 - The First International Gathering of Motorcycle Tourists.</h1></b></center>
     <br><br>
-    <b><h2 h3 style="text-indent: 20px;">Also known as "GOBLIN SHOW", was held in Odessa
+    <b><h2 style="text-indent: 20px;">Also known as "GOBLIN SHOW", was held in Odessa
   On the territory of the Burevestnik camp, district 411 Batteries. Andrey "Goblin" became the organizer and ideological inspirer. The whole event took place over 2 days. The number of participants then did not exceed 60 motorcyclists from Ukraine and Moldova.</h2></b>
 <br><br>
 <div  style="column-count: 1; column-gap: 40px;"><h3 style="text-indent: 20px;"> In 2000 and 2001 the same organizer held the 2nd and 3rd, respectively, International Gatherings of motorcycle tourists "GOBLIN SHOW", in Odessa, on the territory of the "Pavlov's House", Luzanovka district. The geography of these gatherings was already much wider. More than 200 participants came from all over Ukraine, Russia, Belarus, Moldova and Poland. The events lasted 2 days and included a parade of an organized motorcycle column through the central streets of the city and rock concerts with the participation of groups from Odessa</h3>
