--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="The official site of BIKE-SHOW.">
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
   <meta name="author" content="BIKERS">
