--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
 	<meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compateble" content="IE=adge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css" type="text/css">
 <title>Meeting</title>
@@ -82,102 +82,106 @@
           <h3>"PAVLOV'S HOUSE"</h3></b></center>
       </div>
       <div>
-<br><h3>&nbsp;&nbsp;&nbsp;Contests, prizes, Parade September 25 at 12.00</h3>
-<br>&nbsp;&nbsp;&nbsp;Girls - 0 $
-<br>&nbsp;&nbsp;&nbsp;Boys - 50 grams a day
-<br>&nbsp;&nbsp;&nbsp;Bikers and boys - 150 $. 4 days
-<br>&nbsp;&nbsp;&nbsp;Attributes separately, at will!!!
-<br><br>&nbsp;&nbsp;&nbsp;<b><h3>FESTIVAL PROGRAM :</h3></b>
-<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><h3>• 23 SEPTEMBER, THURSDAY</h3></b>
-<br>&nbsp;&nbsp;&nbsp;12.00 Arrival, accommodation, rest of the festival guests, day and evening excursions in Odessa
-<br>&nbsp;&nbsp;&nbsp;16.00 - OPENING, start of the SHOW
-<br>&nbsp;&nbsp;&nbsp;1st day of the Rock Festival, show program, competition!!!
-<br>&nbsp;&nbsp;&nbsp;Qualifying round for fights without rules!!! Champion of the day advances to the final on Saturday, September 25th!!!
-<br>&nbsp;&nbsp;&nbsp;Armwrestling qualifying round!!! Champion of the day advances to the final on Saturday, SEPTEMBER 25!!!
-<br>&nbsp;&nbsp;&nbsp;•Performance of groups:
-<br>&nbsp;&nbsp;&nbsp;16.20 Fights in the ring, 1 round, recording from the host from 15.00 to 15.30, max 8 people, 4 fights!!!
-<br>&nbsp;&nbsp;&nbsp;16.40 gr. "WHITE SMOKE", Odessa
-<br>&nbsp;&nbsp;&nbsp;17.20 Competition "Power drinking beer"
-<br>&nbsp;&nbsp;&nbsp;17.40 gr. "Surprise"
-<br>&nbsp;&nbsp;&nbsp;18.20 Fights in the ring, 2nd circle, 4 people, 2 fights, +2 women's fights!!!
-<br>&nbsp;&nbsp;&nbsp;18.40 gr. &lt;PIK&gt; Kyiv
-<br>&nbsp;&nbsp;&nbsp;19.20 Arm wrestling.
-<br>&nbsp;&nbsp;&nbsp;19.40 gr. &lt;MONOLITH&gt; Shostka
-<br>&nbsp;&nbsp;&nbsp;20.20 Final fights in the ring, the winner goes to the final on Saturday, the prize is a MOTORCYCLE!!!
-<br>&nbsp;&nbsp;&nbsp;20.40 Striptease
-<br>&nbsp;&nbsp;&nbsp;21.00 gr. "GHOSTLY PARADISE", Odessa
-<br>&nbsp;&nbsp;&nbsp;22.00 gr. &lt;TABULA RASA&gt;  Kyiv
-<br>&nbsp;&nbsp;&nbsp;22.50 gr. "surprise" 
-<br>&nbsp;&nbsp;&nbsp;23.30 gr. gr. "MASTER CLASS", Odessa
-<br>&nbsp;&nbsp;&nbsp;00.20 gr. "ANGER CONTROL", Odessa
-<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><h3>• 24 SEPTEMBER, FRIDAY</h3></b>
+<br><h3>Contests, prizes, Parade September 25 at 12.00</h3>
+<br>Girls - 0 $
+<br></br>Boys - 50 grams a day
+<br>Bikers and boys - 150 $. 4 days
+<br>Attributes separately, at will!!!
+<br><br><b><h3>FESTIVAL PROGRAM :</h3></b>
+<br><br><b><h3>• 23 SEPTEMBER, THURSDAY</h3></b>
+<br>12.00 Arrival, accommodation, rest of the festival guests, day and evening excursions in Odessa
+<br>16.00 - OPENING, start of the SHOW
+<br>1st day of the Rock Festival, show program, competition!!!
+<br>Qualifying round for fights without rules!!! Champion of the day advances to the final on Saturday, September 25th!!!
+<br>Armwrestling qualifying round!!! Champion of the day advances to the final on Saturday, SEPTEMBER 25!!!
+<br>• Performance of groups:
+<br>16.20 Fights in the ring, 1 round, recording from the host from 15.00 to 15.30, max 8 people, 4 fights!!!
+<br>16.40 gr. "WHITE SMOKE", Odessa
+<br>17.20 Competition "Power drinking beer"
+<br>17.40 gr. "Surprise"
+<br>18.20 Fights in the ring, 2nd circle, 4 people, 2 fights, +2 women's fights!!!
+<br>18.40 gr. "PIK" Kyiv
+<br>19.20 Arm wrestling.
+<br>19.40 gr. "MONOLITH" Shostka
+<br>20.20 Final fights in the ring, the winner goes to the final on Saturday, the prize is a MOTORCYCLE!!!
+<br>20.40 Striptease
+<br>21.00 gr. "GHOSTLY PARADISE", Odessa
+<br>22.00 gr. "TABULA RASA"  Kyiv
+<br>22.50 gr. "surprise" 
+<br>23.30 gr. gr. "MASTER CLASS", Odessa
+<br>00.20 gr. "ANGER CONTROL", Odessa
+<br><br><b><h3>• 24 SEPTEMBER, FRIDAY</h3></b>
 <br>
-<br>&nbsp;&nbsp;&nbsp;Qualifying round for fights without rules.!!! Champion of the day advances to the final on Saturday!!!
-<br>&nbsp;&nbsp;&nbsp;Armwrestling qualifying round!!! Champion of the day advances to the final on Saturday!!!
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Performance of groups:
-<br>&nbsp;&nbsp;&nbsp;16.20 Fights in the ring, 1 round, recording from the leader from 15.00 to 15.30, max 8 people, 4 fights !!!
-<br>&nbsp;&nbsp;&nbsp;16.40 gr. &lt;CRANE CRANE&gt; Odessa
-<br>&nbsp;&nbsp;&nbsp;17.20 Competition "BEST TATTOO"
-<br>&nbsp;&nbsp;&nbsp;17.40 gr. WKRAB Mr. Kishinev
-<br>&nbsp;&nbsp;&nbsp;18.20 Fights in the ring, 2nd circle, 4 people, 2 fights, +2 women's fights!!!
-<br>&nbsp;&nbsp;&nbsp;18.40 gr. &lt;PHANTOM&gt; Dneprodzerzhinsk
-<br>&nbsp;&nbsp;&nbsp;19.20 Arm wrestling.
-<br>&nbsp;&nbsp;&nbsp;19.40 gr.. &lt;KHOBOT and CO&gt;  Kyiv
-<br>&nbsp;&nbsp;&nbsp;20.20 Final fights in the ring, the winner goes to the final on Saturday!!!
-<br>&nbsp;&nbsp;&nbsp;20.40 gr. &lt;FROM THE SCREW&gt; Rovno
-<br>&nbsp;&nbsp;&nbsp;21.20 Striptease
-<br>&nbsp;&nbsp;&nbsp;21.40 gr. METAL FORCE DNEPROPETROVSK !!!
-<br>&nbsp;&nbsp;&nbsp;22.40 gr.   &lt;VERMOUTH&gt;  Dnepropetrovsk
-<br>&nbsp;&nbsp;&nbsp;23.20 gr. &lt;ALLIANCE&gt; Odessa
-<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><h3>• SEPTEMBER 25, SATURDAY</h3></b>
+<br>Qualifying round for fights without rules.!!! Champion of the day advances to the final on Saturday!!!
+<br>Armwrestling qualifying round!!! Champion of the day advances to the final on Saturday!!!
+<br>• Performance of groups:
+<br>16.20 Fights in the ring, 1 round, recording from the leader from 15.00 to 15.30, max 8 people, 4 fights !!!
+<br>16.40 gr. "CRANE CRANE" Odessa
+<br>17.20 Competition "BEST TATTOO"
+<br>17.40 gr. WKRAB Mr. Kishinev
+<br>18.20 Fights in the ring, 2nd circle, 4 people, 2 fights, +2 women's fights!!!
+<br>18.40 gr. "PHANTOM" Dneprodzerzhinsk
+<br>19.20 Arm wrestling.
+<br>19.40 gr.. "KHOBOT and CO"  Kyiv
+<br>20.20 Final fights in the ring, the winner goes to the final on Saturday!!!
+<br>20.40 gr. "FROM THE SCREW" Rovno
+<br>21.20 Striptease
+<br>21.40 gr. METAL FORCE DNEPROPETROVSK !!!
+<br>22.40 gr.   "VERMOUTH"  Dnepropetrovsk
+<br>23.20 gr. "ALLIANCE" Odessa
+<br><br><b><h3>• SEPTEMBER 25, SATURDAY</h3></b>
 <br>
-<br>&nbsp;&nbsp;&nbsp;Parade of bikers in the city START at 12.00!!!
-<br>&nbsp;&nbsp;&nbsp;15.00 - start of the SHOW
-<br>&nbsp;&nbsp;&nbsp;Rock Festival, show program, contests!!!
-<br>&nbsp;&nbsp;&nbsp;FINAL fights without rules. !!!
-<br>&nbsp;&nbsp;&nbsp;Armwrestling FINAL!!!
-<br>&nbsp;&nbsp;&nbsp;Beer contests, motorcycle contests, etc. !!!
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Performance of groups:
-<br>&nbsp;&nbsp;&nbsp;14.30 Exhibiting motorcycles for the contest "Best Remake"
-<br>&nbsp;&nbsp;&nbsp;15.00 gr. "SPORNA", Odessa
-<br>&nbsp;&nbsp;&nbsp;15.30 Competition "Beam Fighting"
-<br>&nbsp;&nbsp;&nbsp;15.50 gr. “Capetown" Nikolaev
-<br>&nbsp;&nbsp;&nbsp;16.30 Fights in the ring, 1st round, WINNERS OF THE PREVIOUS DAYS PARTICIPATE!!!
-<br>&nbsp;&nbsp;&nbsp;Recording at the host from 15.00 to 15.30, max 8 people, 4 fights!!!
-<br>&nbsp;&nbsp;&nbsp;16.50 gr. "PROGREDIOR", Nikolaev
-<br>&nbsp;&nbsp;&nbsp;17.30 Arm wrestling.
-<br>&nbsp;&nbsp;&nbsp;17.50 gr. "ALIVE", Chisinau
-<br>&nbsp;&nbsp;&nbsp;18.30 Fights in the ring, 2 rounds, 4 people, 2 fights, +2 women's fights!!!
-<br>&nbsp;&nbsp;&nbsp;18.50 gr. "TROL OPPRESSES SPRUCE", ST. POLTAVA!!!
-<br>&nbsp;&nbsp;&nbsp;19.30 Competition "The loudest exhaust".
-<br>&nbsp;&nbsp;&nbsp;19.50 gr. MLLM Kyiv
-<br>&nbsp;&nbsp;&nbsp;20.40 Final fights in the ring, the winner receives a valuable prize!!!
-<br>&nbsp;&nbsp;&nbsp;21.00 Striptease.
-<br>&nbsp;&nbsp;&nbsp;21.10 gr. "DVS", Kyiv
-<br>&nbsp;&nbsp;&nbsp;21.50 Rewarding of the rally participants in the nominations: "max. km.", "max. age of the biker", "min. age of the biker". SALUTE!!!
-<br>&nbsp;&nbsp;&nbsp;22.00 gr. &lt;KNOCKOUT&gt; DNIPRO!!!
-<br>&nbsp;&nbsp;&nbsp;23.00 gr. "@TRAKTOR" Kyiv
-<br>&nbsp;&nbsp;&nbsp;23.40 gr. &lt;BELKA and STRELKA&gt;  Odessa
-<br>&nbsp;&nbsp;&nbsp;00.20 gr. KRYGOLAM, Kherson
-<br>&nbsp;&nbsp;&nbsp;01.00 gr. "NEO" Nikolaev - gr. "TIK" OWN PERSON.
-<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><h3>•26 SEPTEMBER, SUNDAY</h3></b>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Performance of groups:
-<br>&nbsp;&nbsp;&nbsp;15.20 Fights in the ring, 1 round, recording from the leader from 15.00 to 15.30, max 8 people, 4 fights!!!
-<br>&nbsp;&nbsp;&nbsp;16.00 gr. “T.Ch.K.” Nikolaev
-<br>&nbsp;&nbsp;&nbsp;16.40 gr. &lt;PATRIOT&gt; Mr. Ishmael
-<br>&nbsp;&nbsp;&nbsp;17.20 Arm wrestling.
-<br>&nbsp;&nbsp;&nbsp;17.40 gr. "STANS", Odessa 
-<br>&nbsp;&nbsp;&nbsp;18.20 Fights in the ring, 2nd circle, 4 people, 2 fights, +2 women's fights!!!
-<br>&nbsp;&nbsp;&nbsp;18.40 gr. &lt;MODE&gt;ODESSA
-<br>&nbsp;&nbsp;&nbsp;19.30 Final fights in the ring, the winner receives a valuable prize!!!"
-<br>&nbsp;&nbsp;&nbsp;19.50 gr. &lt;WINGS&gt; Nikolaei
-<br>&nbsp;&nbsp;&nbsp;20.40 Striptease.
-<br>&nbsp;&nbsp;&nbsp;20.50 gr. &lt;DOG HEART&gt; Nikolaev
-<br>&nbsp;&nbsp;&nbsp;21.50 gr. "GrimOff Band", Nikolaev
-<br>&nbsp;&nbsp;&nbsp;2.30 gr. "DEBOSH", Donetsk
-<br>&nbsp;&nbsp;&nbsp;00.00 gr. "RESISTANCE", Odessa
-<br><br>&nbsp;&nbsp;&nbsp;THERE MAY BE CHANGES!!!
-<br>&nbsp;&nbsp;&nbsp;FOR GROUPS TO CONFIRM PARTICIPATION, i.e. call back!!!
+<br>Parade of bikers in the city START at 12.00!!!
+<br>15.00 - start of the SHOW
+<br>Rock Festival, show program, contests!!!
+<br>FINAL fights without rules. !!!
+<br>Armwrestling FINAL!!!
+<br>Beer contests, motorcycle contests, etc. !!!
+<br>• Performance of groups:
+<br>14.30 Exhibiting motorcycles for the contest "Best Remake"
+<br>15.00 gr. "SPORNA", Odessa
+<br>15.30 Competition "Beam Fighting"
+<br>15.50 gr. “Capetown" Nikolaev
+<br>16.30 Fights in the ring, 1st round, WINNERS OF THE PREVIOUS DAYS PARTICIPATE!!!
+<br>Recording at the host from 15.00 to 15.30, max 8 people, 4 fights!!!
+<br>16.50 gr. "PROGREDIOR", Nikolaev
+<br>17.30 Arm wrestling.
+<br>17.50 gr. "ALIVE", Chisinau
+<br>18.30 Fights in the ring, 2 rounds, 4 people, 2 fights, +2 women's fights!!!
+<br>18.50 gr. "TROL OPPRESSES SPRUCE", ST. POLTAVA!!!
+<br>19.30 Competition "The loudest exhaust".
+<br>19.50 gr. MLLM Kyiv
+<br>20.40 Final fights in the ring, the winner receives a valuable prize!!!
+<br>21.00 Striptease.
+<br>21.10 gr. "DVS", Kyiv
+<br>21.50 Rewarding of the rally participants in the nominations: "max. km.", "max. age of the biker", "min. age of the biker". SALUTE!!!
+<br>22.00 gr. "KNOCKOUT" DNIPRO!!!
+<br>23.00 gr. "@TRAKTOR" Kyiv
+<br>23.40 gr. "BELKA and STRELKA"  Odessa
+<br>00.20 gr. KRYGOLAM, Kherson
+<br>01.00 gr. "NEO" Nikolaev - gr. "TIK" OWN PERSON.
+<br><br><b><h3>• 26 SEPTEMBER, SUNDAY</h3></b>
+<br>• Performance of groups:
+<br>15.20 Fights in the ring, 1 round, recording from the leader from 15.00 to 15.30, max 8 people, 4 fights!!!
+<br>16.00 gr. “T.Ch.K.” Nikolaev
+<br>16.40 gr. "PATRIOT" Mr. Ishmael
+<br>17.20 Arm wrestling.
+<br>17.40 gr. "STANS", Odessa 
+<br>18.20 Fights in the ring, 2nd circle, 4 people, 2 fights, +2 women's fights!!!
+<br>18.40 gr. "MODE" ODESSA
+<br>19.30 Final fights in the ring, the winner receives a valuable prize!!!"
+<br>19.50 gr. "WINGS" Nikolaei
+<br>20.40 Striptease.
+<br>20.50 gr. "DOG HEART" Nikolaev
+<br>21.50 gr. "GrimOff Band", Nikolaev
+<br>22.30 gr. "DEBOSH", Donetsk
+<br>00.00 gr. "RESISTANCE", Odessa
+<br><br>THERE MAY BE CHANGES!!!
+<br>FOR GROUPS TO CONFIRM PARTICIPATION, i.e. call back!!!
+        <br>
+        <br>
+        <br>
+      <br>
 </div>
     </div>
     <footer class="footer">
@@ -187,7 +191,7 @@
       <ul class="social">
         <li><a  href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><ion-icon name="logo-facebook"></ion-icon></a></li>
         <li><a  href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"><ion-icon></a></li>
+        <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"></ion-icon></a></li>
         <li><a  href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><ion-icon name="logo-instagram"></ion-icon></a></li>
       </ul>
       <ul class="menuf">
