index.html validation completed successfully

--- a/index.html
+++ b/index.html
@@ -70,25 +70,28 @@
         </div>
       </div>
     </section>
-    <section id="map-wrapper">
+  
+    <div id="map-wrapper">
      
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2440.954355155151!2d-9.703081055514918!3d52.28053063788901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453568658c5ac3%3A0x7bd379e99980494!2sKerry%20College%20(Monavalley%20Campus)!5e0!3m2!1sen!2snl!4v1671322289902!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+    </div>
+  
       <div class="div" style= "background-color: #b4f4caff;">
-      <div>
-        <br><center><h2>AUTUMN ROCK-N-ROLL</h2></center>
-        <center><h3>23 - 27 SEPTEMBER 2030</h3></center>
-        <center><br><h3>Reservation of rooms by phone +38 048 5432100 (2344057)</h3><b>
-          <h3>"PAVLOV'S HOUSE"</h3></b></center>
+      <div class="text-center">
+        <br><h2>AUTUMN ROCK-N-ROLL</h2>
+        <h3>23 - 27 SEPTEMBER 2030</h3>
+        <br>
+        <h3>Reservation of rooms by phone +38 048 5432100 (2344057)</h3>
+          <h3>"PAVLOV'S HOUSE"</h3>
       </div>
       <div>
 <br><h3>Contests, prizes, Parade September 25 at 12.00</h3>
 <br>Girls - 0 $
-<br></br>Boys - 50 grams a day
+<br><br>Boys - 50 grams a day
 <br>Bikers and boys - 150 $. 4 days
 <br>Attributes separately, at will!!!
-<br><br><b><h3>FESTIVAL PROGRAM :</h3></b>
-<br><br><b><h3>• 23 SEPTEMBER, THURSDAY</h3></b>
+<br><br><h3>FESTIVAL PROGRAM :</h3>
+<br><br><h3>• 23 SEPTEMBER, THURSDAY</h3>
 <br>12.00 Arrival, accommodation, rest of the festival guests, day and evening excursions in Odessa
 <br>16.00 - OPENING, start of the SHOW
 <br>1st day of the Rock Festival, show program, competition!!!
@@ -110,7 +113,7 @@
 <br>22.50 gr. "surprise" 
 <br>23.30 gr. gr. "MASTER CLASS", Odessa
 <br>00.20 gr. "ANGER CONTROL", Odessa
-<br><br><b><h3>• 24 SEPTEMBER, FRIDAY</h3></b>
+<br><br><h3>• 24 SEPTEMBER, FRIDAY</h3>
 <br>
 <br>Qualifying round for fights without rules.!!! Champion of the day advances to the final on Saturday!!!
 <br>Armwrestling qualifying round!!! Champion of the day advances to the final on Saturday!!!
@@ -129,7 +132,7 @@
 <br>21.40 gr. METAL FORCE DNEPROPETROVSK !!!
 <br>22.40 gr.   "VERMOUTH"  Dnepropetrovsk
 <br>23.20 gr. "ALLIANCE" Odessa
-<br><br><b><h3>• SEPTEMBER 25, SATURDAY</h3></b>
+<br><br><h3>• SEPTEMBER 25, SATURDAY</h3>
 <br>
 <br>Parade of bikers in the city START at 12.00!!!
 <br>15.00 - start of the SHOW
@@ -160,7 +163,7 @@
 <br>23.40 gr. "BELKA and STRELKA"  Odessa
 <br>00.20 gr. KRYGOLAM, Kherson
 <br>01.00 gr. "NEO" Nikolaev - gr. "TIK" OWN PERSON.
-<br><br><b><h3>• 26 SEPTEMBER, SUNDAY</h3></b>
+<br><br><h3>• 26 SEPTEMBER, SUNDAY</h3>
 <br>• Performance of groups:
 <br>15.20 Fights in the ring, 1 round, recording from the leader from 15.00 to 15.30, max 8 people, 4 fights!!!
 <br>16.00 gr. “T.Ch.K.” Nikolaev
