- completed validation of pages gallery.html and  form.html - update README with screenshots of all HTML pages.

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
+  <head>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="The official site of BIKE-SHOW.">
@@ -30,12 +30,12 @@
         </nav>
       </div>
      </header>
-  <img class="goblin" src="MotorcycleMeatUp/assets/images/goblinshow.jpg">
+  <img class="goblin" src="MotorcycleMeatUp/assets/images/goblinshow.jpg" alt="goblinshow">
 <div style="background-color: #b4f4caff;" class="div2">
-<center><b><h1>In 1999 - The First International Gathering of Motorcycle Tourists.</h1></b></center>
+<h1 class="text-center">In 1999 - The First International Gathering of Motorcycle Tourists.</h1>
     <br><br>
-    <b><h2 style="text-indent: 20px;">Also known as "GOBLIN SHOW", was held in Odessa
-  On the territory of the Burevestnik camp, district 411 Batteries. Andrey "Goblin" became the organizer and ideological inspirer. The whole event took place over 2 days. The number of participants then did not exceed 60 motorcyclists from Ukraine and Moldova.</h2></b>
+    <h2 style="text-indent: 20px;">Also known as "GOBLIN SHOW", was held in Odessa
+  On the territory of the Burevestnik camp, district 411 Batteries. Andrey "Goblin" became the organizer and ideological inspirer. The whole event took place over 2 days. The number of participants then did not exceed 60 motorcyclists from Ukraine and Moldova.</h2>
 <br><br>
 <div  style="column-count: 1; column-gap: 40px;"><h3 style="text-indent: 20px;"> In 2000 and 2001 the same organizer held the 2nd and 3rd, respectively, International Gatherings of motorcycle tourists "GOBLIN SHOW", in Odessa, on the territory of the "Pavlov's House", Luzanovka district. The geography of these gatherings was already much wider. More than 200 participants came from all over Ukraine, Russia, Belarus, Moldova and Poland. The events lasted 2 days and included a parade of an organized motorcycle column through the central streets of the city and rock concerts with the participation of groups from Odessa</h3>
 <br><br><h3 style="text-indent: 20px;">In 2002, the 4th International Gathering of Motorcycle Tourists “GOBLIN SHOW” was also held in Odessa on the territory of the Odeskabel OJSC stadium, total. sq. 15000 sq.m. More than 400 participants arrived from England, Sweden, Germany, Austria, Poland, Russia, Belarus, Moldova and Ukraine. The rally took place over 2 days, during which a parade of moto-nations was organized around the city and a rock festival was held on its own professional stage with rented concert lighting equipment and sound with a power of 25 kW. Groups from Moscow, Chisinau, Odessa performed at the festival. The event was attended by over 1000 citizens.</h3>
@@ -59,7 +59,7 @@
   <ul class="social">
     <li><a  href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><ion-icon name="logo-facebook"></ion-icon></a></li>
     <li><a  href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><ion-icon name="logo-twitter"></ion-icon></a></li>
-    <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"><ion-icon></a></li>
+    <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"></ion-icon></a></li>
     <li><a  href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><ion-icon name="logo-instagram"></ion-icon></a></li>
   </ul>
   <ul class="menuf">
