--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
 	</div>
 </div>
   <div class="pictures">
-<a class="pictures-img" href="https://ibb.co/VYS87mZ" target="_blank"><img src="https://i.ibb.co/r26JCsS/Untitled-2.jpg" alt="Untitled-2"/></a>
+<a class="pictures-img" href="https://ibb.co/VYS87mZ" target="_blank"><img src="https://i.ibb.co/r26JCsS/Untitled-2.jpg" alt="Untitled-2"></a>
 <a class="pictures-img" href="https://ibb.co/ZdCtQtW" target="_blank"><img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg" alt="DSC-3529"></a>
 <a class="pictures-img" href="https://ibb.co/drVdwQx" target="_blank"><img src="https://i.ibb.co/hy4PJKw/Untitled-4.jpg" alt="Untitled-4"></a>
 <a class="pictures-img" href="https://ibb.co/kDPcQ7z" target="_blank"><img src="https://i.ibb.co/myPz6jd/Untitled-3.jpg" alt="Untitled-3"></a>
