--- a/form.html
+++ b/form.html
@@ -29,8 +29,8 @@
       </div>
     </header>
     <div style="background-color: #b4f4caff;">
-    <center><h1 class="signup">Sign Up Entry</h1></center>
-      <center><h3>Please, fill up the form before the ivent!</h3></center>
+    <h1 class="signup text-center">Sign Up Entry</h1>
+      <h3 class="text-center">Please, fill up the form before the ivent!</h3>
       <form class="form" action="https://formdump.codeinstitute.net" target="_blank" method="post">
         <input id="name-field" name="name" class="input" type="text" placeholder="Name" required>
         <input id="email-field" name="email" class="input" type="email" placeholder="E-mail" required>
@@ -47,7 +47,7 @@
     <ul class="social">
         <li><a  href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><ion-icon name="logo-facebook"></ion-icon></a></li>
         <li><a  href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"><ion-icon></a></li>
+        <li><a  href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Find us on LinkedIn (link opens in a new tab)"><ion-icon name="logo-linkedin"></ion-icon></a></li>
         <li><a  href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><ion-icon name="logo-instagram"></ion-icon></a></li>
     </ul>
   <ul class="menuf">
