add some text and performed Lighthouse test

--- a/form.html
+++ b/form.html
@@ -29,8 +29,8 @@
       </div>
     </header>
     <div style="background-color: #b4f4caff;">
-    <h1 class="signup text-center">Sign Up Entry</h1>
-      <h3 class="text-center">Please, fill up the form before the ivent!</h3>
+    <h1 class="signup text-center permit">Sign Up Entry</h1>
+      <h3 class="text-center permit">Please, fill up the form before the due date!</h3>
       <form class="form" action="https://formdump.codeinstitute.net" target="_blank" method="post">
         <input id="name-field" name="name" class="input" type="text" placeholder="Name" required>
         <input id="email-field" name="email" class="input" type="email" placeholder="E-mail" required>
@@ -43,7 +43,7 @@
       <div class="div text-center" style= "background-color: #b4f4caff;">
 
 
-        <h3 class="permit">Please fill up the registration for your entry permit.</h3>
+        <h3 class="permit">Submit the registration for your entry permit.</h3>
         <br>
         <br>
         <br>
