--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css" type="text/css">
+   <meta name="description" content="The official site of BIKE-SHOW.">
+  <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
+	<meta name="author" content="BIKERS">
+	<link rel="stylesheet" href="style.css">
 <title>Meeting</title>
 </head>
 <body>
