--- a/about.html
+++ b/about.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang='en'>
-  <head>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<html lang="en">
+ <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The official site of BIKE-SHOW.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="The official site of BIKE-SHOW.">
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
 	<meta name="author" content="BIKERS">
-	<link rel="stylesheet" href="style.css" type="text/css">
-  <title>About US</title>
+	<link rel="stylesheet" href="style.css">
+<title>Meeting</title>
 </head>
 <body>
 <header>
@@ -28,9 +27,13 @@
             <li><a href="form.html"><h3 style="color: red">SignUp</h3></a></li>
           </ul>
         </nav>
-      </div>
+         
+
      </header>
-  <img class="goblin" src="MotorcycleMeatUp/assets/images/goblinshow.jpg" alt="goblinshow">
+  <div><img class="goblin" src="MotorcycleMeatUp/assets/images/goblinshow.jpg" alt="goblinshow">
+  </div>
+
+  
 <div style="background-color: #b4f4caff;" class="div2">
 <h1 class="text-center">In 1999 - The First International Gathering of Motorcycle Tourists.</h1>
     <br><br>
@@ -71,5 +74,7 @@
   </ul>
   <p>©2022 Online Tutorials | All Rights Reserved</p>
 </footer>
+   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
      </body>
    </html>
